# secret-santa

./: .gitignore
.github/actions/setup/: action.yml
.github/workflows/: workflow.yml
api/: README.md  __init__.py  api.py  main.py  models.py  pyproject.toml  requirements.txt  samconfig.toml  template.yaml  utils.py
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/public/: 404.html
frontend/src/: App.tsx  List.tsx  Pair.tsx  main.ts  main.tsx
