[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.5",
    "mangum>=0.19.0",
    "phonenumbers>=8.13.50",
    "pydantic-extra-types>=2.10.0",
    "twilio>=9.3.7",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D100", "PLR2004", "D203", "D212", "COM812", "ISC001", "EM101", "TRY003", "UP007"]

[dependency-groups]
dev = [
    "boto3>=1.35.63",
    "pre-commit>=4.0.1",
    "ruff>=0.7.4",
    "uvicorn>=0.32.0",
]
